--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,8 @@
 <head>
-    <title>Apollo</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <title>Minimallists</title>
 </head>
 
 <body>
